Helper function to easily hook d3 usual function model, scale and axis updated using these function

--- a/t2.html
+++ b/t2.html
@@ -29,7 +29,7 @@ body {
 
 <script>
 
-var data = dd3.dataPoints();
+var data = dd3.getData();
 var dim = dd3.dataDimensions();
 var xDomain = [dim.xmin, dim.xmax];
 var yDomain = [dim.ymin, dim.ymax];
