--- a/t2.html
+++ b/t2.html
@@ -86,8 +86,8 @@ var svg = dd3.select("body").append("svg")
     .enter().append("circle")
       .attr("class", "dot")
       .attr("r", 2.5)
-      .attr("cx", function (d) { return xScale(d[0]); })
-      .attr("cy", function (d) { return yScale(d[1]); })
+      .attr("cx", function (d) { return xScale(d['x']); })
+      .attr("cy", function (d) { return yScale(d['y']); })
       .style("fill", function (d) { return "black"; });
 	  
 //*/
