--- a/t2.html
+++ b/t2.html
@@ -22,7 +22,11 @@ body {
 </style>
 <body>
 
-<script src="http://d3js.org/d3.v3.js"></script>
+<!-- <script src="http://d3js.org/d3.v3.js"></script> -->
+<!-- <script src="http://cdn.peerjs.com/0.3/peer.min.js"></script> -->
+<script src="d3.js"></script>
+<script src="peer.js"></script>
+
 <script src="utils.js"></script>
 <script src="api.js"></script>
 <script src="dd3.v0.js"></script>
