--- a/DD3/index.html
+++ b/DD3/index.html
@@ -93,11 +93,11 @@ body {
           .append("g")
           .append("circle")
 	      .attr("class", "dot")
-	      .attr("r", 2.5)
+	      .attr("r", 5)
 	      .attr("cx", function (d) { return xScale(d['x']); })
 	      .attr("cy", function (d) { return yScale(d['y']); })
-	      .style("fill", function (d, i) { return "black"; });
-	     // .send();
+	      .style("fill", function (d, i) { return "black"; })
+	      .send();
 	  
 	    //*/
     });
