Add pie chart example, minor changes and corrections

--- a/DD3/all.html
+++ b/DD3/all.html
@@ -4,14 +4,14 @@
     <title>HTML Target Frames</title>
     </head>
 	<frameset cols="25%, 25%, 25%, 25%" rows="50%, 50%" FRAMEBORDER=no BORDER=0 FRAMESPACING=0 >
-	   <frame src="index.html?row=0&column=11" MARGINHEIGHT=0 MARGINWIDTH=0 SCROLLING=no/>
-	   <frame src="index.html?row=0&column=12" MARGINHEIGHT=0 MARGINWIDTH=0 SCROLLING=no/>
-	   <frame src="index.html?row=0&column=13" MARGINHEIGHT=0 MARGINWIDTH=0 SCROLLING=no/>
-	   <frame src="index.html?row=0&column=14" MARGINHEIGHT=0 MARGINWIDTH=0 SCROLLING=no/>
-	   <frame src="index.html?row=1&column=11" MARGINHEIGHT=0 MARGINWIDTH=0 SCROLLING=no/>
-	   <frame src="index.html?row=1&column=12" MARGINHEIGHT=0 MARGINWIDTH=0 SCROLLING=no/>
-	   <frame src="index.html?row=1&column=13" MARGINHEIGHT=0 MARGINWIDTH=0 SCROLLING=no/>
-	   <frame src="index.html?row=1&column=14" MARGINHEIGHT=0 MARGINWIDTH=0 SCROLLING=no/>
+	   <frame src="index.html?row=0&column=11" MARGINHEIGHT=0 MARGINWIDTH=0 />
+	   <frame src="index.html?row=0&column=12" MARGINHEIGHT=0 MARGINWIDTH=0 />
+	   <frame src="index.html?row=0&column=13" MARGINHEIGHT=0 MARGINWIDTH=0 />
+	   <frame src="index.html?row=0&column=14" MARGINHEIGHT=0 MARGINWIDTH=0 />
+	   <frame src="index.html?row=1&column=11" MARGINHEIGHT=0 MARGINWIDTH=0 />
+	   <frame src="index.html?row=1&column=12" MARGINHEIGHT=0 MARGINWIDTH=0 />
+	   <frame src="index.html?row=1&column=13" MARGINHEIGHT=0 MARGINWIDTH=0 />
+	   <frame src="index.html?row=1&column=14" MARGINHEIGHT=0 MARGINWIDTH=0 />
     </frameset>
     <noframes>
         <body>
