--- a/DD3/allGraph.html
+++ b/DD3/allGraph.html
@@ -3,15 +3,15 @@
 <head>
     <title>All Graphs</title>
 </head>
-<frameset cols="25%, 25%, 25%, 25%" rows="50%, 50%" frameborder=no border=0 framespacing=0>
-    <frame src="graph.html?row=0&column=11" marginheight=0 marginwidth=0 scrolling=no />
-    <frame src="graph.html?row=0&column=12" marginheight=0 marginwidth=0 scrolling=no />
-    <frame src="graph.html?row=0&column=13" marginheight=0 marginwidth=0 scrolling=no />
-    <frame src="graph.html?row=0&column=14" marginheight=0 marginwidth=0 scrolling=no />
-    <frame src="graph.html?row=1&column=11" marginheight=0 marginwidth=0 scrolling=no />
-    <frame src="graph.html?row=1&column=12" marginheight=0 marginwidth=0 scrolling=no />
-    <frame src="graph.html?row=1&column=13" marginheight=0 marginwidth=0 scrolling=no />
-    <frame src="graph.html?row=1&column=14" marginheight=0 marginwidth=0 scrolling=no />
+<frameset cols="25%, 25%, 25%, 25%" rows="50%, 50%" FRAMEBORDER=no BORDER=0 FRAMESPACING=0>
+    <frame src="graph.html?row=0&column=11" marginheight=0 marginwidth=0 />
+    <frame src="graph.html?row=0&column=12" marginheight=0 marginwidth=0 />
+    <frame src="graph.html?row=0&column=13" marginheight=0 marginwidth=0 />
+    <frame src="graph.html?row=0&column=14" marginheight=0 marginwidth=0 />
+    <frame src="graph.html?row=1&column=11" marginheight=0 marginwidth=0 />
+    <frame src="graph.html?row=1&column=12" marginheight=0 marginwidth=0 />
+    <frame src="graph.html?row=1&column=13" marginheight=0 marginwidth=0 />
+    <frame src="graph.html?row=1&column=14" marginheight=0 marginwidth=0 />
 </frameset>
 <noframes>
     <body>
